--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 					<div class="header__title">Сделай шаг в мир сноуборда</div>
 						<div class="header__subtitle">Покоряй высоту, путешествуй, катайся вместе с нами! Snow travel поможет тебе осуществить мечту! 
 					</div>
-					<div class="header__button">
-						<p>Узнать больше</p>
+					<div class="header__button"><a href="#turs"><p>Узнать больше</p></a>
+						
 					</div>
 				</div>
 			</div>
@@ -278,7 +278,6 @@
 						</div>
 					</div>
 				</div>
-				<hr>
 		</div>
 	</div>
 	<div class="contact" id="contact">
@@ -307,7 +306,11 @@
 
 
 		</div>
+		<div class="upper"><i class="fas fa-angle-up"></i>
+
+		</div>
 	</div>
+		
 
 		
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
